# r2sql

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/scripts/: stage_artifacts.sh
.github/workflows/: build.yml
cmake/: FindRadare2.cmake  versioninfo.cmake  versioninfo.rc.in
examples/: CMakeLists.txt  list_funcs.cpp
prompts/: r2sql_agent.md
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/common/: mcp_server.cpp  mcp_server.hpp
src/lib/: CMakeLists.txt
src/lib/include/r2sql/: backend.hpp  backend_mock.hpp  r2sql.hpp  session.hpp  version.hpp
src/lib/src/: backend_common.cpp  backend_libr.cpp  backend_mock.cpp  backend_r2pipe.cpp  json_utils.cpp  json_utils.hpp  session.cpp  table_utils.hpp  tables.hpp  tables_blocks.cpp  tables_bookmarks.cpp  tables_comments.cpp  tables_decompiler.cpp  tables_exports.cpp  tables_flags.cpp  tables_funcs.cpp  tables_grep.cpp  tables_imports.cpp  tables_instructions.cpp  tables_projects.cpp  tables_sections.cpp  tables_segments.cpp  tables_strings.cpp  tables_types.cpp  tables_types_members.cpp  tables_welcome.cpp  tables_xrefs.cpp  version.cpp
src/plugin/: CMakeLists.txt  core_r2sql.cpp
